# netchat

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
src/: main.py
